--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.17)
 # COMPILE_FLAGS(-std=c++11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 project(KiGL)
 
 include_directories(
     ./dep/glew/include
     ./dep/glfw/include
+    ./utils/stb_image
 )
 link_directories(
     ./dep/glew/lib/Release/Win32/
@@ -25,5 +26,7 @@ add_executable(main
     KiVertexArray.cpp
     KiVertexBufferLayout.cpp
     KiShader.cpp
+    KiTexture.cpp
     # KiRender.cpp
+    ./utils/stb_image/stb_image.cpp
 )
