--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,9 @@
 cmake_minimum_required(VERSION 3.14)
 set( CMAKE_CXX_STANDARD 17 )
-project(GL)
-
-set(EXECUTABLE_OUTPUT_PATH ./..)
-
-include_directories(
-    ./inc
-    ./dep/glew/include
-    ./dep/glfw/include
-    ./utils/stb_image
-    ./dep/eigen
-)
+project(KGL)
 
 
-IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    message("build in Linux")
-    link_directories(
-        ./dep/glew/lib/Release/ubuntu18/
-        ./dep/glfw/ubuntu18/
-    )
-ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
-    message("build in Windows")
-    link_directories(
-        ./dep/glew/lib/Release/Win32/
-        ./dep/glfw/lib-mingw-w64/Win32/
-    )
-ENDIF()
-
-
-add_executable(main 
-    main.cpp 
-    
+add_library( ${PROJECT_NAME}
     src/Logger.cpp 
     src/VertexBuffer.cpp 
     src/IndexBuffer.cpp
@@ -38,12 +11,24 @@ add_executable(main
     src/VertexBufferLayout.cpp
     src/Shader.cpp
     src/Texture.cpp
-    
     ./utils/stb_image/stb_image.cpp
 )
 
+
+target_include_directories( ${PROJECT_NAME} PUBLIC
+    ./inc
+    ./dep/glew/include
+    ./dep/glfw/include
+    ./utils/stb_image
+    ./dep/eigen
+)
+
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    target_link_libraries(main
+    target_link_directories(${PROJECT_NAME} PUBLIC 
+        ./dep/glew/lib/Release/ubuntu18/
+        ./dep/glfw/ubuntu18/
+    )
+    target_link_libraries(${PROJECT_NAME}  PUBLIC 
         GLEW
         glfw3
         GL
@@ -51,7 +36,11 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
         -ldl
     )
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
-    target_link_libraries(main
+    target_link_directories(${PROJECT_NAME} PUBLIC 
+        ./dep/glew/lib/Release/Win32/
+        ./dep/glfw/lib-mingw-w64/Win32/
+    )
+    target_link_libraries(${PROJECT_NAME} PUBLIC 
         glew32s
         glfw3
         Opengl32
@@ -60,4 +49,7 @@ ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
 ENDIF()
 
 
-add_executable(test test.cpp)
+add_executable(example
+    example/example.cpp 
+)
+target_link_libraries(example KGL)
